--- a/nginx.conf
+++ b/nginx.conf
@@ -32,7 +32,8 @@ http {
 
 	pagespeed FileCachePath /var/ngx_pagespeed_cache;
 
-	pagespeed RewriteLevel CoreFilters;
-	pagespeed EnableFilters collapse_whitespace,remove_comments;
+	# pagespeed RewriteLevel CoreFilters;
+	pagespeed RewriteLevel PassThrough;
+	pagespeed EnableFilters combine_javascript,rewrite_javascript;
 
 }
