--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,6 @@ http {
 
 	# pagespeed RewriteLevel CoreFilters;
 	pagespeed RewriteLevel PassThrough;
-	pagespeed EnableFilters combine_javascript,rewrite_javascript;
+	pagespeed EnableFilters combine_javascript,rewrite_javascript,inline_javascript,remove_comments,collapse_whitespace;
 
 }
